--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                     </div>
             </div>
         </div>
+        <div class="circle"></div>
     </div>
 </section>
 <section class="section_fourth container-fluid">
