--- a/index.html
+++ b/index.html
@@ -134,15 +134,15 @@
                         <div class="carousel-inner" role="listbox">
                             <div class="item active">
                                 <img src="img/slide1.png" height="262" width="1206"/>
-
+                                <button class="slide_button text-uppercase">Design win</button>
                             </div>
                             <div class="item">
                                 <img src="img/slide2.png" height="262" width="1206"/>
-
+                                <button class="slide_button text-uppercase">Design win</button>
                             </div>
                             <div class="item">
                                 <img src="img/slide3.png" height="262" width="1206"/>
-
+                                <button class="slide_button text-uppercase">Design win</button>
                             </div>
                         </div>
                     </div>
@@ -207,7 +207,6 @@
             </div>
             <div class="col-lg-3">
                 <div class="section_fifth__text">
-
                     <div class="img_container">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 45 45" width="45" height="45">
                             <style>
@@ -245,12 +244,12 @@
 <section class="section_seventh container-fluid">
     <div class="content container_max ">
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-6 col-md-6">
                 <div class="section_seventh__img">
                     <img src="img/sec7.png" />
                 </div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6 col-md-6 col-sm-12 ">
                 <div class="section_seventh__text">
                     <p>12th June 2015</p>
                     <p>Lorem ipsum dolor sit amet, cotur adipisicing elit sed do eiusmod
@@ -267,7 +266,7 @@
 <section class="section_eighth container-fluid">
     <div class="content container_max ">
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-6 col-md-12">
                 <div class="section_eighth__text">
                     <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
@@ -276,7 +275,7 @@
                     <p><span>92</span> Comments </p>
                 </div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6 ">
                 <div class="section_eighth__img">
                     <img src="img/sec8.png" />
                 </div>
@@ -287,7 +286,7 @@
 <section class="section_ninth container-fluid">
     <div class="content container_max ">
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-6 col-sm-12">
                 <div class="section_ninth__text">
                     <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
                         Nisi ut aliquip ex ea commodo. </p>
@@ -303,7 +302,7 @@
 <section class="section_tenth container-fluid">
     <div class="content container_max ">
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-6 col-md-6">
                 <div class="section_tenth__text">
                     <p>Get in touch </p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
@@ -311,7 +310,7 @@
                         laboris nisi ut aliquip ex ea commodo consequat.  </p>
                 </div>
             </div>
-            <div class="col-lg-5 col-lg-offset-1">
+            <div class="col-lg-5 col-lg-offset-1 col-md-5 col-md-offset-1">
                 <div class="section_tenth__text_input">
                     <p>Stay in touch</p>
                     <div class="input-group">
@@ -326,7 +325,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-2">
+            <div class="col-lg-2 col-md-2  col-sm-3">
                 <div class="section_tenth__text">
                     <ul>Resources
                         <li>Tour</li>
@@ -337,7 +336,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-lg-2 ">
+            <div class="col-lg-2 col-md-2 col-sm-3">
                 <div class="section_tenth__text">
                     <ul>Features
                         <li>Tour</li>
@@ -348,7 +347,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-lg-2 ">
+            <div class="col-lg-2 col-md-2 col-sm-3">
                 <div class="section_tenth__text">
                     <ul>How To’s
                         <li>Tour</li>
