--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <button class="btn" type="button"><i class="ion-ios-search"></i></button>
                     </span>
             </div>
-            <button class="bay">Buy $21</button>
+            <button class="buy">Buy $21</button>
                 <div class="btn-group">
                     <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="ion-android-menu"></i>
@@ -249,7 +249,7 @@
                     <img src="img/sec7.png" />
                 </div>
             </div>
-            <div class="col-lg-6 col-md-6 col-sm-12 ">
+            <div class="col-lg-6 col-md-6">
                 <div class="section_seventh__text">
                     <p>12th June 2015</p>
                     <p>Lorem ipsum dolor sit amet, cotur adipisicing elit sed do eiusmod
